# yaac

./: .clang-format  CMakeLists.txt  README.md  config
lib/: nfd.h
scripts/: format.sh  install.sh
songs/: .gitignore  README.md
src/: Button.cc  Button.hh  Clock.cc  Clock.hh  Color.hh  Config.cc  Config.hh  Opts.cc  Opts.hh  Program.cc  Program.hh  Renderer.cc  Renderer.hh  Settings.hh  Util.cc  Util.hh  Vector2.hh  Window.cc  Window.hh  main.cc
test/: tests.sh
